🎨 FIX: Logo path + White theme
✅ Logo Fix:
- Copied logo to src/frontend/
- Changed path: bunery-logo.svg (direct)
- No more 404 error!

🤍 White Theme:
- Background: #ffffff (white)
- Text: #1a1a1a (dark)
- Card: #f8f8f8 (light gray)
- Borders: #e0e0e0 (subtle)
- Primary: #ff1b40 (Bunery red stays)

🎯 Result:
- Clean, modern, light theme
- Logo loads correctly
- Professional look!

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="app">
     <div class="hero">
-      <img src="../../assets/bunery-logo.svg" alt="Bunery" class="logo">
+      <img src="bunery-logo.svg" alt="Bunery" class="logo">
       <h1>Bunery</h1>
       <p>🥐 Bake your desktop apps</p>
     </div>
