🎨 FINAL: Red logo + Backend hint + Clean title
✨ Logo Update:
- Changed all fill colors to #ff1b40 (Bunery red)
- Logo now fully branded
- Consistent red throughout (text + bunny)

📝 Content Changes:
- Removed "Bunery" h1 (already in logo)
- Changed tagline: "🥐 Bake your desktop apps with Bun"
- Added backend hint: "⚡️ Counter powered by Bun backend"
- Shows that counter uses real backend bindings

🎯 Result:
- Clean, minimal design
- Logo speaks for itself
- Clear backend/frontend connection demo
- Perfect starter template!

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -10,8 +10,7 @@
   <div class="app">
     <div class="hero">
       <img src="bunery-logo.svg" alt="Bunery" class="logo">
-      <h1>Bunery</h1>
-      <p>🥐 Bake your desktop apps</p>
+      <p>🥐 Bake your desktop apps with Bun</p>
     </div>
 
     <div class="counter-card">
@@ -21,6 +20,7 @@
         <button onclick="increment()" class="primary">+</button>
       </div>
       <button onclick="reset()" class="reset">Reset</button>
+      <p class="backend-hint">⚡️ Counter powered by Bun backend</p>
     </div>
 
     <div class="info">
