🐛 FIX: API Demo imports + navigation
✅ Fixes:
- Copied runtime to src/frontend/bunery-runtime.ts
- Updated api-demo.ts import path (relative)
- Fixed navigation button in index.html
- Rebuilt frontend with new files

🎯 API Demo now works:
- All 8 API tests functional
- bunery.fs, os, window, dialog, storage, shell, clipboard, app
- Interactive test buttons
- Real-time results

✨ Ready to test!

--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -25,7 +25,7 @@
 
     <div class="info">
       <span>Direct Bindings • &lt;1ms</span>
-      <span><a href="api-demo.html" style="color: #ff1b40; text-decoration: none;">API Demo →</a></span>
+      <span><button onclick="window.location.href='api-demo.html'" style="background: none; border: none; color: #ff1b40; cursor: pointer; font: inherit;">API Demo →</button></span>
     </div>
   </div>
 
