--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bunery</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <div class="app">
     <div class="hero">
-      <img src="bunery-logo.svg" alt="Bunery" class="logo">
+      <img src="/bunery-logo.svg" alt="Bunery" class="logo">
       <p>🥐 Bake your desktop apps with Bun</p>
-      </div>
+    </div>
 
     <div class="counter-card">
         <div id="counter" class="counter">0</div>
@@ -25,10 +25,10 @@
 
     <div class="info">
       <span>Direct Bindings • &lt;1ms</span>
-      <span><button onclick="window.location.href='api-demo.html'" style="background: none; border: none; color: #ff1b40; cursor: pointer; font: inherit;">API Demo →</button></span>
+      <span><button onclick="window.location.href='/api-demo.html'" style="background: none; border: none; color: #ff1b40; cursor: pointer; font: inherit;">API Demo →</button></span>
     </div>
   </div>
 
-  <script type="module" src="app.ts"></script>
+  <script type="module" src="/app.ts"></script>
 </body>
 </html>
